# Jiku

./: .gitignore  Dockerfile.backend  LICENSES.txt  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 077503e3f2da_add_cascade_to_linelinetoken.py  6d6489d2713f_add_line_preset.py  98accd944f7d_add_presets_table.py  cb5052dd6dbe_initial.py
src/api/: celery_worker.py  main.py
src/api/core/: anki.py
src/api/core/config/: __init__.py  anki.py  loader.py  shared.py
src/api/core/text_analysis/: ebook_processing.py  spacy_wrapper.py  utils.py
src/api/db/: __init__.py  database.py
src/api/db/models/: books.py  core.py  texthooker.py
src/api/routers/: anki.py  books.py  options.py  texthooker.py
src/api/schemas/: books.py  core.py  texthooker.py
src/frontend/: Dockerfile  README.md  generate_types.py  package-lock.json  package.json
src/frontend/src/: app.html
src/frontend/src/lib/: additional-svelte-typings.d.ts
src/frontend/src/lib/api_types/: books.ts  core.ts  texthooker.ts
src/frontend/src/lib/components/: BookCarousel.svelte  BookCarouselItem.svelte  BookGridItem.svelte  BookRenderer.svelte  CenteredPopup.svelte  ConfirmationPopup.svelte  ErrorBox.svelte  GridDisplay.svelte  KnownBar.svelte  SelectOption.svelte  SelectionPopup.svelte  TaskItem.svelte  TasksMonitor.svelte  TextInputPopup.svelte  TexthookerLine.svelte  Toggle.svelte
src/frontend/src/lib/utils/: clickOutside.ts  context.svelte.ts  (+3 more)
src/frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
(+22 files in other folders)
