[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jiku"
version = "0.1.0"
description = "Langauge learning tools"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi[standard]>=0.135.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.49",
    "tinycss2>=1.5.1",
]


[tool.setuptools.packages.find]
where = ["src"]
