[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jiku"
version = "0.1.0"
description = "Langauge learning tools"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.3",
    "ebooklib>=0.20",
    "fastapi[standard]>=0.135.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "spacy[ja]>=3.8.14",
    "sqlalchemy>=2.0.49",
    "tinycss2>=1.5.1",
]


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.5",
    "pydantic-to-typescript>=2.0.0",
]
